--- a/README.html
+++ b/README.html
@@ -539,6 +539,9 @@ and delete sourcecode/ex53solution</p>
 <p>Merge configs/datasources into wildfly config file.</p>
 </li>
 <li>
+<p>Download Jenkins (latest LTS jenkins.war) from jenkins.org; copy it to WILDFLY_HOME/standalone/deployments</p>
+</li>
+<li>
 <p>Start Wildfly: cd WILDFLY_HOME; bin/standalone -c standalone-full.xml
 (if you don&#8217;t want JMS support omit the -c and the filename).</p>
 </li>
@@ -660,7 +663,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-17 08:37:00 EST
+Last updated 2018-01-17 09:37:55 EST
 </div>
 </div>
 </body>
