--- a/databases.html
+++ b/databases.html
@@ -519,7 +519,7 @@ create database jpa_aggregation owner student;
 <p>These databases are used as follows:</p>
 </div>
 <table id="Databases" class="tableblock frame-all grid-all spread">
-<caption class="title">Table 1. The Persisten Databases</caption>
+<caption class="title">Table 1. The Persistent Databases</caption>
 <colgroup>
 <col style="width: 18.1818%;">
 <col style="width: 36.3636%;">
@@ -570,7 +570,7 @@ create database jpa_aggregation owner student;
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-15 13:05:07 EST
+Last updated 2018-01-17 13:29:09 EST
 </div>
 </div>
 </body>
