--- a/passwords.html
+++ b/passwords.html
@@ -436,7 +436,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Remote VM Login (for when you lock the remote screen): <em>student</em>, either <em>pw</em> or <em>studentpw</em></p>
 </div>
 <div class="paragraph">
-<p>Local Student login: n/a</p>
+<p>Local Student login (at LT Ed Center): n/a</p>
+</div>
+<div class="paragraph">
+<p>(For both LT systems, look closely at "password hint" :-) )</p>
 </div>
 <div class="paragraph">
 <p>Postgresql Web App access: <em>student, student</em></p>
@@ -453,7 +456,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-16 12:17:02 EST
+Last updated 2018-01-17 20:30:06 EST
 </div>
 </div>
 </body>
