A few words on the database

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -487,14 +487,14 @@ With practice, the errors will become easier to track down here.</p>
 </div>
 </div>
 <div class="paragraph">
-<p>99.45% of the time you should just ignore this. Seeing a stack trace of Maven&#8217;s
+<p>99.45% of the time you should just <strong>ignore this advice</strong>. Seeing a stack trace of Maven&#8217;s
 internals isn&#8217;t that interesting.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_jms_issues_with_wildfly">JMS Issues With WildFly</h4>
 <div class="paragraph">
-<p>When you run ex43&#8217;s CommentSender, you should see something like this:</p>
+<p>When you run ex53&#8217;s CommentSender, you should see something like this:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -589,10 +589,21 @@ Make <strong>very sure</strong> you leave it as well-formed XML.</p>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_database">Database</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Postgresql runs as a Windows Service, so you can control it from the Services Control Panel.</p>
+</div>
+<div class="paragraph">
+<p>Its main log file is in c:\WILDFLY-DIR\standalone\log\server.log</p>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-02-15 13:41:00 EST
+Last updated 2018-01-17 21:32:59 EST
 </div>
 </div>
 </body>
