--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -444,6 +444,10 @@ the following errors from <strong>Eclipse</strong> can be ignored:</p>
 The persistence.xml file does not have supported content for this JPA platform.</pre>
 </div>
 </div>
+<div class="paragraph">
+<p>As well, some of the projects (notably Exercises 4.1 and 5.2) will have a bunch of red flags when
+first opened, because you haven&#8217;t yet written the code. These will go away as you write the code.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_maven_deployment">Maven Deployment</h3>
@@ -616,7 +620,7 @@ Make <strong>very sure</strong> you leave it as well-formed XML.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-18 12:13:41 EST
+Last updated 2018-01-18 12:27:38 EST
 </div>
 </div>
 </body>
