--- a/README.html
+++ b/README.html
@@ -480,6 +480,9 @@ and <em>git</em> (<a href="https://git-scm.com/" class="bare">https://git-scm.co
 installed and on your PATH.</p>
 </li>
 <li>
+<p>Start the postgres database if needed (the installer normally starts it for you).</p>
+</li>
+<li>
 <p>Make sure you have Wildfly installed but not running;
 you could use a different App Server but you&#8217;d have to change
 all the Maven deployment configurations (most projects have
@@ -503,14 +506,14 @@ AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how
 </div>
 </li>
 <li>
-<p>Git clone all the projects into a single parent directory
+<p>Git clone the following projects into a single parent directory
 (in the course we use C:\ but anyplace <strong>should</strong> work):</p>
 </li>
 </ul>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>cd WHERE_YOU_INSTALLED
+<pre>cd WHERE_YOU_INSTALL
 for repo in LearningTree/TicketManorJava \
 	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-exaamples,makehandsons,createprojects}
 do
@@ -521,7 +524,7 @@ done</pre>
 <div class="ulist">
 <ul>
 <li>
-<p>Create a 'student' account inside Postgres:
+<p>Create a 'student' account inside Postgres, giving the PostGres Admin password;
 psql &lt;&lt;!
 create role student password 'student' login;
 !</p>
@@ -681,7 +684,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-17 21:30:17 EST
+Last updated 2018-01-18 15:04:06 EST
 </div>
 </div>
 </body>
