--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -637,10 +637,21 @@ It&#8217;s pretty solid so you shouldn&#8217;t have to restart it during the wee
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_vi_editor">vi editor</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>E309: Unable to open swap file for YOUR_FILE</p>
+</div>
+<div class="paragraph">
+<p>Ignore this; just press Enter to skip over it.</p>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-18 14:36:16 EST
+Last updated 2018-01-18 15:06:17 EST
 </div>
 </div>
 </body>
