--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -588,6 +588,12 @@ the solution is to follow the steps "Cleaning Wildfly Configuration".</p>
 <div class="paragraph">
 <p>The main log file is in c:\WILDFLY-DIR\standalone\log\server.log</p>
 </div>
+<div class="paragraph">
+<p>There are two batch files to help you view this log, np-log (notepad) and vi-log (vi editor).
+These will take a while to start as the log file is big.
+For Notepad, keyboard shortcuts CTRL/Home and CTRL/End are your friends for navigation.
+For vi, you just have to know what you&#8217;re doing :-).</p>
+</div>
 <div class="sect2">
 <h3 id="_restart_issues_with_wildfly">Restart Issues with Wildfly</h3>
 <div class="paragraph">
@@ -651,7 +657,7 @@ It&#8217;s pretty solid so you shouldn&#8217;t have to restart it during the wee
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-18 15:06:17 EST
+Last updated 2018-01-18 15:17:26 EST
 </div>
 </div>
 </body>
