--- a/README.html
+++ b/README.html
@@ -550,7 +550,8 @@ create database jpa_aggregation owner student;
 <li>
 <p>Decide if you want JMS or not.
 If so, use config file standalone-full.xml in the following; if not, use standalone.xml
-and delete sourcecode/ex53solution</p>
+and delete sourcecode/ex53solution.
+If so, see the README in ex53 for one additional step.</p>
 </li>
 <li>
 <p>Merge configs/datasources into wildfly config file standalone/configuration/CHOSEN_CONFIG_FILE</p>
@@ -692,7 +693,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-20 18:11:50 EST
+Last updated 2018-01-22 14:59:14 EST
 </div>
 </div>
 </body>
