--- a/README.html
+++ b/README.html
@@ -518,7 +518,7 @@ AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how
 <div class="content">
 <pre>cd WHERE_YOU_INSTALL
 for repo in LearningTree/TicketManorJava \
-	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-exaamples,makehandsons,createprojects}
+	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-examples,makehandsons,createprojects}
 do
     git clone https://github.com/$repo
 done</pre>
@@ -730,7 +730,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-26 11:10:24 EST
+Last updated 2018-01-26 13:38:02 EST
 </div>
 </div>
 </body>
