Convert MicroService from Signup to Customer Comment form...
to become the UI for ex52's JMS-based comment/feedback service.
Bonus is to actually send it.
Also, sanitize input used in HTML feedback page.

--- a/sourcecode/exUSsolution/src/main/webapp/index.xhtml
+++ b/sourcecode/exUSsolution/src/main/webapp/index.xhtml
@@ -14,9 +14,9 @@
 
    		<ui:composition template="/templates/standard.xhtml">
 
-			<ui:define name="pageTitle">MicroService Signup Demo</ui:define>
+			<ui:define name="pageTitle">Acme Widgets Customer Feedback (MicroService Demo)</ui:define>
   
-			<ui:define name="pageHeader">MicroService Signup Demo</ui:define>
+			<ui:define name="pageHeader">Acme Widgets Customer Feedback (MicroService Demo)</ui:define>
 
 			<ui:define name="body">
 				<h:messages globalOnly='true' showSummary="true" showDetail="false" style="color: red; font-weight: bold;"/>
@@ -38,13 +38,22 @@
 					</h:inputText>
 					<h:message id='emailMessage' for='emailTF' errorStyle="color:red"/>
 
+					<h:outputText value="Your Comments" required="true"/>
+					<h:inputTextarea id='commentsTF' value="#{microService.comments}" required='true'
+						rows="5" cols="80">
+
+					</h:inputTextarea>
+					<h:message id='commentsMessage' for='commentsTF' errorStyle="color:red"/>
+
 					<h:outputText value=""/>
 					<h:commandButton id="submit"
-						action="#{microService.signup}" 
+						action="#{microService.submit}" 
 						value="Sign Up">
 					</h:commandButton>
 					</h:panelGrid>
 				</h:form>
+
+				<p>Privacy Notice: We will share your feedback with our business partner, TicketManor.com. Thank you.</p>
 
 			</ui:define>
 		</ui:composition>
