--- a/sourcecode/exUSsolution/src/main/webapp/thanks.xhtml
+++ b/sourcecode/exUSsolution/src/main/webapp/thanks.xhtml
@@ -7,16 +7,16 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/standard.xhtml">
 
-<ui:define name="pageHeader">MicroService Demo: Thank You Page</ui:define>
+<ui:define name="pageHeader">Acme Widgets Thank You (MicroService Demo)</ui:define>
 
 <ui:define name="body">
 
 	<p:panel>
-	<f:facet name="header">MicroService Demo: Thank You Page</f:facet>
+	<f:facet name="header">Acme Widgets Thank You (MicroService Demo)</f:facet>
 
 		<h:outputText value="#{microService.greeting}" escape="false"/>
 		<br/>
-		<h:outputText value="And thank you for signing up with us today!"/>
+		<h:outputText value="And thank you for sending us your comments today!"/>
 
 	</p:panel>
 </ui:define>
