Tweak wording; no functional change.

--- a/sourcecode/exUSsolution/src/main/webapp/index.xhtml
+++ b/sourcecode/exUSsolution/src/main/webapp/index.xhtml
@@ -53,7 +53,7 @@
 					</h:panelGrid>
 				</h:form>
 
-				<p>Privacy Notice: We will share your feedback with our business partner, TicketManor.com. Thank you.</p>
+				<p>Privacy Notice: We will share the contents of this form with our business partner, TicketManor.com. Thank you.</p>
 
 			</ui:define>
 		</ui:composition>
